tests/ui/parser/recover/recover-missing-semi.stderr
error[E0308]: mismatched types
  --> $DIR/recover-missing-semi.rs:2:20
   |
LL |     let _: usize = ()
   |            -----   ^^ expected `usize`, found `()`
   |            |
   |            expected due to this

error[E0308]: mismatched types
  --> $DIR/recover-missing-semi.rs:8:20
   |
LL |     let _: usize = ()
   |            -----   ^^ expected `usize`, found `()`
   |            |
   |            expected due to this

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
